--- a/cryptoalarm-app/Dockerfile
+++ b/cryptoalarm-app/Dockerfile
@@ -1,8 +1,9 @@
 FROM python:3
-ADD run.py /
-ADD config.json /
-ADD requirements.txt /
-ADD cryptoalarm /cryptoalarm
+ADD python/run.py /
+ADD python/config.json /
+ADD python/requirements.txt /
+ADD python/cryptoalarm /cryptoalarm
 RUN pip install -r requirements.txt
+#RUN ./run.py --init
 #CMD sleep 3600
 CMD [ "python", "./run.py" ]
