Updating mail sending

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 .env
+cryptoalarm-app/python/config.json
+
 volumes/*
 !volumes/storage
 
@@ -8,3 +10,4 @@ volumes/storage/*
 volumes/storage/framework/*
 !volumes/storage/framework/cache
 !volumes/storage/framework/README.md
+
