--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       dockerfile: Dockerfile
     image: cryptoalarm-app
     container_name: cryptoalarm-app
+#    command: python run.py --init	
     depends_on:
       - "postgres"
       - "web"
