--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ services:
       dockerfile: Dockerfile
     image: cryptoalarm-app
     container_name: cryptoalarm-app
-#    command: python run.py --init	
+    restart: always
+#    command: python run.py --init
     depends_on:
       - "postgres"
       - "web"
@@ -18,6 +19,7 @@ services:
       dockerfile: Dockerfile
     image: cryptoalarm-web
     container_name: cryptoalarm-web
+    restart: always
     working_dir: /var/www
     depends_on:
       - "postgres"
@@ -30,6 +32,7 @@ services:
     image: nginx:latest
     working_dir: /var/www
     container_name: cryptoalarm-nginx
+    restart: always
     depends_on:
       - "web"
     volumes:
