--- a/cryptoalarm-web/laravel/.env.example
+++ b/cryptoalarm-web/laravel/.env.example
@@ -1,31 +1,35 @@
 APP_NAME=Cryptoalarm
-APP_ENV=local
+APP_ENV=production
+APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=https://localhost
+ASSET_URL="${APP_URL}"
+
+LOG_CHANNEL=stack
 
 DB_CONNECTION=pgsql
-DB_HOST=<host/docker>
+DB_HOST=<postgres_host>
 DB_PORT=5432
-DB_DATABASE=<database>
-DB_USERNAME=<username>
-DB_PASSWORD=<password>
+DB_DATABASE=<postgres_db>
+DB_USERNAME=<postgres_username>
+DB_PASSWORD=<postgres_password>
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-QUEUE_DRIVER=sync
+QUEUE_CONNECTION=sync
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=tls
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
