--- a/cryptoalarm-web/laravel/composer.json
+++ b/cryptoalarm-web/laravel/composer.json
@@ -7,17 +7,17 @@
     "require": {
         "php": ">=7.0.0",
         "facebook/webdriver": "^1.5",
-        "fideloper/proxy": "~3.3",
+        "fideloper/proxy": "^4.0",
         "flynsarmy/csv-seeder": "^1.0",
-        "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0",
+        "laravel/framework": "5.8.*",
+        "laravel/tinker": "^1.0",
         "laravelcollective/html": "~5.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0"
+        "mockery/mockery": "^1.0",
+        "phpunit/phpunit": "^7.5"
     },
     "autoload": {
         "classmap": [
