--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - ./cryptoalarm-web/config/.env:/var/www/.env
 
   nginx:
-    image: nginx:latest
+    image: nginx:1.10
     working_dir: /var/www
     container_name: cryptoalarm-nginx
     restart: always
@@ -42,7 +42,7 @@ services:
       - ./nginx/vhost.conf:/etc/nginx/conf.d/default.conf
     ports:
       - ${HTTP_PORT}:80
-      - ${HTTPS_PORT}:443
+#      - ${HTTPS_PORT}:443
 
   postgres:
     image: postgres:10
