--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 POSTGRES_USER=<username>
 POSTGRES_PASSWORD=<password>
 POSTGRES_DB=<database>
-LOCAL_VOLUME_MOUNT_POINT=/opt/cryptoalarm/volumes
+POSTGRES_PORT=<postgres port, should be 5432>
+LOCAL_VOLUME_MOUNT_POINT=<mounting point for volumes>
 COMPOSE_HTTP_TIMEOUT=200
 NETWORK=<networkname>
+HTTP_PORT=<public http port>
+HTTPS_PORT=<public https port>
